Fix: Mobile sidebar filter is not showing up Fixed sidebar filter issue with mobile by applying z-index value and related changes.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,6 +25,10 @@ body {
   min-height: 680px;
 }
 
+.navbar {
+  min-height: 60px;
+}
+
 @media screen and (max-width: 767px) {
   .row-offcanvas {
     position: relative;
@@ -42,12 +46,14 @@ body {
   }
 
   .row-offcanvas-left.active {
-    left: 100%;
+    left: 108%;
   }
 
   .sidebar-offcanvas {
+    background-color: #fff;
     position: absolute;
     top: 0;
     width: 100%;
+    z-index: 999;
   }
 }
